# hlk-serial-port

./: CMakeLists.txt  Doxyfile  README.md  config.cmake.in
example/: CMakeLists.txt  main.cpp
include/hlk/serialport/: serialport.cpp  serialport.h
src/: serialport.cpp  serialport.h
test/: CMakeLists.txt  main.cpp
